[package]
name = "esbuild"
version = "0.1.0"
authors = ["Joshua Miller <jsmiller@uchicago.edu>"]
build = "build.rs"

[build-dependencies]
walkdir = "0.1.5"

[dependencies]
env_logger = "0.3.4"
log = "0.3.6"
openssl = "0.7.14"
quick-error = "1.1.0"
regex = "0.1.73"
rust-crypto = "0.2.36"
serde = "^0.8"
serde_json = "^0.8"
threadpool = "1.3.1"
url = "1.2.0"
walkdir = "0.1.5"
yaml-rust = "0.3.3"
scoped-pool = "1"

[dependencies.postgres]
version = "0.11.10"
features = ["serde_json", "openssl"]
